Issue reporter closed/open icons are not vertically aligned, fixes #44660

--- a/src/vs/code/electron-browser/issue/media/issueReporter.css
+++ b/src/vs/code/electron-browser/issue/media/issueReporter.css
@@ -363,20 +363,19 @@ button {
 .issues-container > .issue > .issue-link {
 	display: inline-block;
 	width: calc(100% - 82px);
-	height: 22px;
-	line-height: 22px;
+	vertical-align: top;
 	overflow: hidden;
+	padding-top: 3px;
+	white-space: nowrap;
 }
 
 .issues-container > .issue > .issue-state {
-	height: 22px;
 	padding: 3px 6px;
 	margin-right: 5px;
 	color: #CCCCCC;
 	background-color: #3c3c3c;
 	border-radius: .25rem;
 	display: inline-block;
-	vertical-align: top;
 }
 
 .issues-container > .issue > .issue-state .octicon {
